# Immich-ML-Tag

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
src/immich_ml_tag/: __init__.py  api.py  config.py  embeddings.py  train.py
